--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -3,6 +3,16 @@
 @tailwind utilities;
 
 @layer components {
+  .roadmapBg {
+    background-image: url(./images/roadmap_bg.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+  }
+  .roadmapBg1 {
+    background-image: url(./images/roadmap_bg_1.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+  }
   .righteous {
     font-family: 'righteous', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
       'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
